[gd_scene load_steps=7 format=3 uid="uid://0iep3tsvbsfw"]

[ext_resource type="Script" uid="uid://byvo8plv284ni" path="res://scripts/Tests/diareia_testing_behaviour.gd" id="1_wx0xl"]
[ext_resource type="PackedScene" uid="uid://iokacrnac0al" path="res://scenes/Characters/Diareia.tscn" id="2_76fxh"]

[sub_resource type="NavigationMesh" id="NavigationMesh_oywpu"]
vertices = PackedVector3Array(-34.4775, 0.913912, -34.4587, -34.4775, 0.913912, 34.5413, 34.5225, 0.913912, 34.5413, 34.5225, 0.913912, -34.4587)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
agent_height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4f0er"]
albedo_color = Color(1, 0.470588, 0.231373, 1)

[sub_resource type="BoxMesh" id="BoxMesh_n2qdb"]
size = Vector3(70, 1, 70)

[sub_resource type="SphereShape3D" id="SphereShape3D_qmd80"]
radius = 8.0

[node name="DiareiaTestingBehaviour" type="Node3D"]
script = ExtResource("1_wx0xl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0405328, 0.999178, 0, -0.999178, -0.0405328, 0, 15.5808, 0)

[node name="Diareia" parent="." instance=ExtResource("2_76fxh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.4878, 6, 0)
collision_mask = 8195

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_oywpu")

[node name="Map" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0225468, -8.21586, 0.0412712)
material_override = SubResource("StandardMaterial3D_4f0er")
mesh = SubResource("BoxMesh_n2qdb")
skeleton = NodePath("../..")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6694, 8.58741, -12.9967)

[node name="ReachArea1" type="Area3D" parent="Marker3D"]
collision_layer = 8192
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Marker3D/ReachArea1"]
shape = SubResource("SphereShape3D_qmd80")

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.7262, 6.25906, 38.1566)

[node name="ReachArea2" type="Area3D" parent="Marker3D2"]
collision_layer = 8192
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Marker3D2/ReachArea2"]
shape = SubResource("SphereShape3D_qmd80")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999048, 0.0436194, 0, -0.0274506, 0.628721, 0.777146, 0.0338986, -0.776406, 0.62932, 0, 39.2805, 48.0468)
